# LearnOpenGL

./: .gitignore  CMakeLists.txt  LICENSE  TODO.txt  build.bat  build_and_run.bat  clear_build.bat  run.lnk
.cache/clangd/index/: chapter5.cpp.AD3A49D456938312.idx  chapter5.cpp.F4042E78F0F415F9.idx  context.c.94C199C63C4FE9FE.idx  context.c.AEB3A7546A905C08.idx  context.c.DB953702E8CBA9E9.idx  egl_context.c.10B54F32B4CF538B.idx  egl_context.c.3B0A350EF2C8DC5D.idx  egl_context.c.6EB6DE5804C554A6.idx  glad.c.3E3B7B961B90CEE4.idx  glad.c.AF0A2284BDC0A8BC.idx  glad.c.B55568C56F891363.idx  glad.h.77B44EFAD0223E2C.idx  glad.h.EF85FDAA39932A6F.idx  glad.h.F666AEEAB963DDFA.idx  glfw3.h.6986B140F45DA5D8.idx  glfw3.h.6B181AC6698BD379.idx  glfw3.h.CF90DA49AD164BE1.idx  glfw3native.h.337FA27A1606F1AA.idx  glfw3native.h.931FBFC0C839D1EC.idx  glfw3native.h.D4AF263F23168C74.idx  init.c.57464D9694E6A4F8.idx  init.c.5982E76185E5833C.idx  init.c.D34C772C5ED0BC48.idx  input.c.5917C67254115FAD.idx  input.c.B09C2A7B0C022F4E.idx  input.c.CC13CDB99F17D4C6.idx  internal.h.2DF6598E35B534BB.idx  internal.h.551FD06ABDDEB292.idx  internal.h.A48A36C5E4E1F477.idx  khrplatform.h.066CCF30A095140F.idx  khrplatform.h.20D2BF8C4B822100.idx  khrplatform.h.8C9D2A88A75CDBAD.idx  main.cpp.6BB19C64B4DED1A1.idx  main.cpp.A8850D405D4A1290.idx  main.cpp.D222A2C96BE18C3B.idx  mappings.h.110F87901DA5A10E.idx  mappings.h.73013FAAAF512382.idx  mappings.h.E884BE7D925EF946.idx  monitor.c.2292D8E392120B65.idx  monitor.c.874B1547343FEAB7.idx  (+77 more)
Objects/: cube.hpp
Shaders/: coordinate_space.frag  coordinate_space.vert  fragmentShaderOrange.frag  fragmentShaderPos.frag  fragmentShaderYellow.frag  fs_texture.frag  light_map.frag  light_map.vert  light_source.frag  light_source_v2.frag  light_source_v2.vert  lighting_goraud.frag  lighting_goraud.vert  lighting_material_shader.frag  lighting_material_shader.vert  lighting_shader.frag  lighting_shader.vert  lighting_shader_view.frag  lighting_shader_view.vert  lights_combined.frag  model_loading.vert  point_light.frag  point_light.vert  spot_light.frag  spot_light.vert  spot_light_smooth.frag  transformation.frag  transformation.vert  vertexShaderOutPosition.vert  vertexShaderPlain.vert  vs_texture.vert
codes/: chapter5.cpp  two_triangles.cpp
include/glad/: glad.h
lib/: camera.cpp  camera.hpp  image_loader.cpp  image_loader.hpp  light.cpp  light.hpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  utils.h  window_context.h
src/: camera.cpp  coordinate_space.cpp  diffuse_specular_directional.cpp  diffuse_specular_map.cpp  diffuse_specular_point.cpp  diffuse_specular_spot.cpp  lighting.cpp  lighting_material.cpp  lighting_phong.cpp  lights_combined.cpp  main.cpp  model_backpack.cpp  outPos.cpp  shader.cpp  spot_light_smooth.cpp  texture.cpp  transformation.cpp  vertex_attributes_info.cpp
